[gd_scene load_steps=17 format=3 uid="uid://bg5qq63652kwu"]

[ext_resource type="Script" path="res://scripts/player/player_controller.gd" id="1_nw80b"]
[ext_resource type="SpriteFrames" uid="uid://gcii401b383q" path="res://graphics/animations/a_player.tres" id="2_csrsl"]
[ext_resource type="AudioStream" uid="uid://c3cl6blk6cvqe" path="res://audio/sfx/teleport.ogg" id="2_se8xm"]
[ext_resource type="AudioStream" uid="uid://bj0i1vekyc0vn" path="res://audio/sfx/step1.ogg" id="3_pbxso"]
[ext_resource type="Script" path="res://scripts/player/player_camera.gd" id="3_r2wma"]
[ext_resource type="AudioStream" uid="uid://cm2q5q5k4y6aa" path="res://audio/sfx/step2.ogg" id="4_07s2b"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="4_f4mx3"]
[ext_resource type="AudioStream" uid="uid://djue6exjyyyhj" path="res://audio/sfx/step3.ogg" id="5_7ceg2"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="5_354d4"]
[ext_resource type="PackedScene" uid="uid://dx00oa0dadpvj" path="res://prefabs/ui/text_box.tscn" id="5_q82jg"]
[ext_resource type="PackedScene" uid="uid://drjv6mqrkwq3n" path="res://prefabs/ui/inventory/inventory_panel.tscn" id="6_gev0q"]
[ext_resource type="PackedScene" uid="uid://cxln0q5pum4mm" path="res://prefabs/ui/quests/quests_panel.tscn" id="7_afh8o"]
[ext_resource type="PackedScene" uid="uid://dhtqpe8pcg80v" path="res://prefabs/ui/stats/stats_panel.tscn" id="8_cq6oo"]
[ext_resource type="PackedScene" uid="uid://dxbd23grq477d" path="res://prefabs/ui/pause_menu.tscn" id="9_n4log"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwn8i"]
size = Vector2(13.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lcm7"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D" groups=["AutonomousMove"]]
z_index = -10
motion_mode = 1
script = ExtResource("1_nw80b")
teleportSfx = ExtResource("2_se8xm")
stepSfx = Array[AudioStream]([ExtResource("3_pbxso"), ExtResource("4_07s2b"), ExtResource("5_7ceg2")])

[node name="ColliderShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_dwn8i")

[node name="AnimatedPlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_csrsl")
animation = &"run"
autoplay = "stand"

[node name="Camera" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(4, 4)
process_callback = 0
position_smoothing_speed = 48.0
script = ExtResource("3_r2wma")

[node name="AlertControl" type="Control" parent="Camera"]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2

[node name="Letterbox" type="Control" parent="Camera"]
visible = false
z_index = 2
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Camera/Letterbox"]
custom_minimum_size = Vector2(0, 146)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 176.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Camera/Letterbox"]
custom_minimum_size = Vector2(0, 146)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -176.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="Shade" type="Control" parent="Camera"]
z_index = 3
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Camera/Shade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ShadeLabel" type="RichTextLabel" parent="Camera/Shade"]
visible = false
clip_contents = false
custom_minimum_size = Vector2(500, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -49.0
offset_right = 375.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 1
theme = ExtResource("4_f4mx3")
bbcode_enabled = true
text = "[center]Cutscene: Paused[/center]"
fit_content = true

[node name="CutscenePauseButtons" type="VBoxContainer" parent="Camera/Shade/ShadeLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = 32.0
offset_right = 125.5
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="ResumeButton" parent="Camera/Shade/ShadeLabel/CutscenePauseButtons" instance=ExtResource("5_354d4")]
layout_mode = 2
text = "Resume"

[node name="SkipButton" parent="Camera/Shade/ShadeLabel/CutscenePauseButtons" instance=ExtResource("5_354d4")]
layout_mode = 2
text = "Skip Cutscene"

[node name="PlayerEventCollider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
input_pickable = false

[node name="EventColliderShape" type="CollisionShape2D" parent="PlayerEventCollider"]
shape = SubResource("RectangleShape2D_6lcm7")

[node name="UI" type="Node2D" parent="."]
z_index = 3
z_as_relative = false
scale = Vector2(0.25, 0.25)

[node name="TextBoxRoot" parent="UI" instance=ExtResource("5_q82jg")]
visible = false

[node name="InventoryPanelNode" parent="UI" instance=ExtResource("6_gev0q")]
visible = false
position = Vector2(-640, -360)
showItemUsePanel = true

[node name="QuestsPanelNode" parent="UI" instance=ExtResource("7_afh8o")]
visible = false
position = Vector2(-640, -360)

[node name="StatsPanelNode" parent="UI" instance=ExtResource("8_cq6oo")]
visible = false
position = Vector2(-640, -360)
isPlayer = true

[node name="PauseMenu" parent="UI" instance=ExtResource("9_n4log")]
visible = false
position = Vector2(-640, -360)

[connection signal="pressed" from="Camera/Shade/ShadeLabel/CutscenePauseButtons/ResumeButton" to="Camera" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Camera/Shade/ShadeLabel/CutscenePauseButtons/SkipButton" to="Camera" method="_on_skip_button_pressed"]
[connection signal="back_pressed" from="UI/InventoryPanelNode" to="." method="_on_inventory_panel_node_back_pressed"]
[connection signal="open_stats" from="UI/InventoryPanelNode" to="UI/StatsPanelNode" method="_on_inventory_panel_node_open_stats"]
[connection signal="act_changed" from="UI/QuestsPanelNode" to="." method="_on_quests_panel_node_act_changed"]
[connection signal="back_pressed" from="UI/QuestsPanelNode" to="." method="_on_quests_panel_node_back_pressed"]
[connection signal="level_up" from="UI/QuestsPanelNode" to="." method="_on_quests_panel_node_level_up"]
[connection signal="turn_in_step_to" from="UI/QuestsPanelNode" to="." method="_on_quests_panel_node_turn_in_step_to"]
[connection signal="attempt_equip_armor_to" from="UI/StatsPanelNode" to="." method="_on_stats_panel_node_attempt_equip_armor_to"]
[connection signal="attempt_equip_weapon_to" from="UI/StatsPanelNode" to="." method="_on_stats_panel_node_attempt_equip_weapon_to"]
[connection signal="back_pressed" from="UI/StatsPanelNode" to="." method="_on_stats_panel_node_back_pressed"]
[connection signal="back_pressed" from="UI/StatsPanelNode" to="UI/InventoryPanelNode" method="_on_stats_panel_node_back_pressed"]
[connection signal="resume_game" from="UI/PauseMenu" to="." method="_on_pause_menu_resume_game"]
